[tool.poetry]
name = "obsidianenhanced-project"
version = "0.1.0"
description = "notes automate"
authors = ["Lorenzo Asimov <lorenzo@asimov.academy>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
